Tapestry-Version von Kreditrechner
git-svn-id: http://wikiserver/svn/littlehelper/trunk@240 0d842271-ca0e-0410-b7f0-83f617a2c6fd

--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -13,11 +13,11 @@
 </div>
 
 <div id="navigation">
-<p><a jwcid="@PageLink" page="Home">Home</a></p>
+<p><a jwcid="@PageLink" page="KreditrechnerPage">Kreditrechner</a></p>
 </div>
 
 <div id="content">
-<p>content</p>
+<p>'Little Helper' ist eine Sammlung nützlicher kleiner Werkzeuge.</p>
 </div>
 
 <div id="sidebar">
