Bugfix: Foreach-Komponente gibt es nicht mehr
git-svn-id: http://wikiserver/svn/littlehelper/trunk@242 0d842271-ca0e-0410-b7f0-83f617a2c6fd

--- a/src/main/webapp/KreditrechnerPage.html
+++ b/src/main/webapp/KreditrechnerPage.html
@@ -49,7 +49,7 @@
 </p>
 
 <div class="resultpanel" jwcid=@Any style="ognl: !showResult ? 'display:none;' : ''">
-<span jwcid="@Foreach" source="ognl: kontoauszug" value="ognl: zwischenbetrag" index="ognl: monatIndex">
+<span jwcid="@For" source="ognl: kontoauszug" value="ognl: zwischenbetrag" index="ognl: monatIndex">
 	<span jwcid="@If" condition="ognl: showResult">
 	Rest nach Zahlung in <span jwcid="@Insert" value="ognl: convertToTime( monatIndex )">10/2006</span>: <span jwcid="@Insert" value="ognl: convertToCurrency(zwischenbetrag)">2345,90</span>€ <br />
 	</span>
